force-app/main/default/objects/Order/fields/Authorized_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Trainer__c</fullName>
    <label>Authorized Trainer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>