force-app/main/default/objects/Order/fields/Devices_Students_Use__c.field-meta.xml
<CustomField>
    <fullName>Devices_Students_Use__c</fullName>
    <label>Devices Students Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows/PC</fullName>
            </value>
            <value>
                <fullName>Chromebook</fullName>
            </value>
            <value>
                <fullName>Macbook</fullName>
            </value>
            <value>
                <fullName>Ipad</fullName>
            </value>
            <value>
                <fullName>Tablet Android</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>