force-app/main/default/objects/Order/fields/Email_District__c.field-meta.xml
<CustomField>
    <fullName>Email_District__c</fullName>
    <label>Email District</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google District</fullName>
            </value>
            <value>
                <fullName>O365 District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>