force-app/main/default/objects/Order/fields/Fufilled_Quanity__c.field-meta.xml
<CustomField>
    <fullName>Fufilled_Quanity__c</fullName>
    <label>Fufilled Quanity</label>
    <summarizedField>OrderItem.Fulfilled_Quantity__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>