force-app/main/default/objects/Order/fields/Have_Teachers_Setup_Their_ViewBoard__c.field-meta.xml
<CustomField>
    <fullName>Have_Teachers_Setup_Their_ViewBoard__c</fullName>
    <label>Have Teachers Setup Their ViewBoard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I prefer ViewSonic did this for us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>