force-app/main/default/objects/Order/fields/Named_Location_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Named_Location_of_Training__c</fullName>
    <label>Training Location (School or Company)</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>