force-app/main/default/objects/Order/fields/Network_Access_Password__c.field-meta.xml
<CustomField>
    <fullName>Network_Access_Password__c</fullName>
    <label>Network Access -  Password</label>
    <length>200</length>
    <type>Text</type>
</CustomField>