force-app/main/default/objects/Order/fields/Network_Access_SSID__c.field-meta.xml
<CustomField>
    <fullName>Network_Access_SSID__c</fullName>
    <label>Network Access -  SSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>