force-app/main/default/objects/Order/fields/Objective2__c.field-meta.xml
<CustomField>
    <fullName>Objective2__c</fullName>
    <label>Objective2</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>