force-app/main/default/objects/Order/fields/Objective_1__c.field-meta.xml
<CustomField>
    <fullName>Objective_1__c</fullName>
    <label>Objective 1</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>