force-app/main/default/objects/Order/fields/Oracle_Channel_Customer__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Channel_Customer__c</fullName>
    <label>Oracle Channel Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>