force-app/main/default/objects/Order/fields/Oracle_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Oracle Order Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>