force-app/main/default/objects/Order/fields/Oracle_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Site_Number__c</fullName>
    <label>Oracle Site Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>