force-app/main/default/objects/Order/fields/Packing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Packing_Instructions__c</fullName>
    <label>Packing Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>