force-app/main/default/objects/Order/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <formula>Account.Owner.FirstName &amp; Account.Owner.LastName &amp; br() &amp;
Account.Owner.Phone &amp; br() &amp;
Account.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>