force-app/main/default/objects/Order/fields/SpaNumber__c.field-meta.xml
<CustomField>
    <fullName>SpaNumber__c</fullName>
    <label>SpaNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>