force-app/main/default/objects/Order/fields/Start_Time_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_of_Training__c</fullName>
    <label>Start Time of Training</label>
    <length>50</length>
    <type>Text</type>
</CustomField>