force-app/main/default/objects/Order/fields/Trainer_Bio__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Bio__c</fullName>
    <label>Trainer Bio</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>