force-app/main/default/objects/Order/fields/Trainer_User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Trainer_User_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer User Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>