force-app/main/default/objects/Order/fields/ViewBoard_URL__c.field-meta.xml
<CustomField>
    <fullName>ViewBoard_URL__c</fullName>
    <formula>Account.EducationPortalURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ViewBoard URL</label>
    <type>Text</type>
</CustomField>