force-app/main/default/objects/Order/fields/What_Browsers_do_you_Use__c.field-meta.xml
<CustomField>
    <fullName>What_Browsers_do_you_Use__c</fullName>
    <label>What Browsers do you Use?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chrome</fullName>
            </value>
            <value>
                <fullName>Microsoft Edge</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
            <value>
                <fullName>Firefox</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>