force-app/main/default/objects/Order/fields/What_Device_s_are_Physically_Connected__c.field-meta.xml
<CustomField>
    <fullName>What_Device_s_are_Physically_Connected__c</fullName>
    <label>What Device(s) are Physically Connected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Mac</fullName>
            </value>
            <value>
                <fullName>Chromebook</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>