force-app/main/default/objects/Order/fields/What_type_of_Casting_would_you_like__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_Casting_would_you_like__c</fullName>
    <label>What type of Casting would you like</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>myViewBoard</fullName>
            </value>
            <value>
                <fullName>Vcast</fullName>
            </value>
            <value>
                <fullName>Chrome Cast for Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>