force-app/main/default/objects/Order/fields/Which_do_you_want_to_focus_on__c.field-meta.xml
<CustomField>
    <fullName>Which_do_you_want_to_focus_on__c</fullName>
    <label>Which do you want to focus on?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>myViewBoard</fullName>
            </value>
            <value>
                <fullName>Android whiteboarding</fullName>
            </value>
            <value>
                <fullName>Tools to use with Mac OS</fullName>
            </value>
            <value>
                <fullName>myViewBoard.com setup</fullName>
            </value>
            <value>
                <fullName>Quickboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>