force-app/main/default/objects/Order/validationRules/Account_Changed_back_to_Viewsonic.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Changed_back_to_Viewsonic</fullName>
    <active>true</active>
    <description>By Defaullt orders from oracle are created with Viewsonic as the account name. on the upset part of integration, we need to ensure that the names cannot go back to ViewSonic once changed</description>
    <errorConditionFormula>PRIORVALUE(AccountId) != AccountId 
 &amp;&amp; CASESAFEID (AccountId )= &apos;0011200001Dq2NAAAZ&apos;</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Cannot change an account to Viewsonic, only if it is an insert.</errorMessage>
</ValidationRule>