force-app/main/default/objects/Order/validationRules/StartDateInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateInFuture</fullName>
    <active>false</active>
    <description>Ensures a start date is in future when it is updated</description>
    <errorConditionFormula>isblank(EffectiveDate) ||

 (EffectiveDate &lt; today() +10 &amp;&amp;
 not(isnew()) &amp;&amp; 
  PRIORVALUE(EffectiveDate) != EffectiveDate
)</errorConditionFormula>
    <errorDisplayField>EffectiveDate</errorDisplayField>
    <errorMessage>Start date should be filled out and be at least 10 days in future</errorMessage>
</ValidationRule>