force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Named_Location_of_Training__c</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Sales_Rep__c</columns>
    <columns>School__c</columns>
    <columns>Oracle_Order_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>